# swag-scanner-cpp

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  license
include/bluetooth/: CoreBluetoothObjC.h  (+1 more)
src/: CMakeLists.txt  main.cpp
src/bluetooth/: CoreBluetoothObjC.mm
src/cli/: CLIClient.cpp  CLIParser.cpp  CLIParser.h  CMakeLists.txt  ControllerFactory.cpp  ControllerFactory.h
src/controller/: CMakeLists.txt  CalibrationController.cpp  CalibrationController.h  Controller.cpp  ControllerFactory.cpp  ControllerFactory.h  ControllerFactoryCache.cpp  ControllerFactoryCache.h  ControllerProxy.cpp  ControllerProxy.h  FilterTestingController.cpp  FilterTestingController.h  HomeController.cpp  IController.cpp  IController.h  IControllerGUI.cpp  IControllerGUI.h  MoveController.cpp  MoveController.h  ProcessingController.cpp  ProcessingController.h  ScanController.cpp  ScanController.h
src/controller/calibration/: CMakeLists.txt  CalibrationController.cpp  CalibrationController.h  CalibrationControllerGUI.cpp  CalibrationControllerGUI.h
src/controller/edit/: CMakeLists.txt  EditingControllerGUI.cpp  EditingControllerGUI.h
src/controller/factory/: CMakeLists.txt  ControllerFactory.cpp  ControllerFactory.h  ControllerFactoryCache.cpp  ControllerFactoryCache.h
src/controller/filter_testing/: CMakeLists.txt
src/controller/home/: CMakeLists.txt  HomeController.cpp
src/controller/manager/: CMakeLists.txt  ControllerManager.cpp  ControllerManager.h  ControllerManagerCache.cpp  ControllerManagerCache.h
src/controller/move/: CMakeLists.txt  MoveController.cpp  MoveController.h  MoveControllerGUI.cpp  MoveControllerGUI.h  MoveMethod.h
src/controller/processing/: CMakeLists.txt  ProcessingController.cpp  ProcessingController.h  ProcessingControllerGUI.cpp  ProcessingControllerGUI.h
src/controller/scan/: CMakeLists.txt  ScanController.cpp  ScanController.h  ScanControllerGUI.cpp  ScanControllerGUI.h
src/file/: CMakeLists.txt  CalibrationFileHandler.cpp  CalibrationFileHandler.h  IFileHandler.cpp  IFileHandler.h  ScanFileHandler.cpp  ScanFileHandler.h
src/model/: CMakeLists.txt  IModel.h
src/model/arduino/: Arduino.cpp  Arduino.h  ArduinoEventHandler.cpp  CMakeLists.txt
src/model/calibration/: CMakeLists.txt  Calibration.h  CalibrationModel.cpp  CalibrationModel.h
src/model/camera/: CMakeLists.txt  ICamera.cpp  ICamera.h  SR305.cpp  SR305.h
src/model/cloud/: CMakeLists.txt  CalibrationModel.cpp  CalibrationModel.h  IModel.h
src/model/equations/: CMakeLists.txt  Normal.cpp  Normal.h  Plane.cpp  Plane.h  Point.cpp  Point.h
src/model/processing/: CMakeLists.txt  Depth.cpp  Depth.h  Filtering.cpp  Filtering.h  Model.cpp  Model.h  ProcessingModel.cpp  ProcessingModel.h  Registration.cpp  Registration.h  Segmentation.cpp  Segmentation.h
src/model/scan/: CMakeLists.txt  ScanModel.cpp  ScanModel.h
src/model/view/: Visualizer.cpp
src/types/: CMakeLists.txt  CameraTypes.cpp  CameraTypes.h  CloudType.h  Normal.cpp  Plane.cpp
src/types/equations/: Equations.h  Normal.cpp  Normal.h  Plane.h
src/utils/: Algorithms.cpp  Algorithms.h  CMakeLists.txt  Constants.h  FileHandler.cpp  Logger.h
src/view/: CMakeLists.txt  Visualizer.cpp  Visualizer.h
src/view/gui/: CMakeLists.txt  CalibrateControls.cpp  CalibrateControls.h  FormsPayload.cpp  FormsPayload.h  IFormsPayload.cpp  IFormsPayload.h  MoveControls.cpp  MoveControls.h  MoveFormsPayload.cpp  MoveFormsPayload.h  ProcessControls.cpp  ProcessControls.h  ScanControls.cpp  ScanControls.h  SideBar.cpp  SideBar.h  SwagGUI.cpp  SwagGUI.h  TEMPGUI.cpp  TEMPGUI.h  calibrate_controls.cpp  calibrate_controls.h  process_controls.cpp  process_controls.h  scan_controls.cpp  scan_controls.h  sidebar.cpp  swag_gui.cpp  swag_gui.h  swagscannerview.ui
src/wrapper/: CoreBluetoothDelegate.m  CoreBluetoothObjC.mm
test/: AlgosTests.cpp  CMakeLists.txt  CameraTypesTests.cpp  FileHandlerTests.cpp  ModelTests.cpp  README.md  WrapperTests.cpp  main.cpp  mainTest.cpp
test/calibrationTests/: CMakeLists.txt  CalibrationTests.cpp  README.md
test/calibrationTests/visual/: CMakeLists.txt  CalibrationTestsVisual.cpp
test/cameraTests/: CMakeLists.txt  CameraTests.cpp
test/equationsTests/: CMakeLists.txt  EquationsTests.cpp  NormalTests.cpp  PlaneTests.cpp  README.md
test/fileTests/: CMakeLists.txt  README.md  ScanFileHandlerPhysicalTests.cpp  ScanFileHandlerTests.cpp
test/mocks/: MockFileHandler.cpp
test/processingTests/: CMakeLists.txt  CalibrationTests.cpp  DepthTests.cpp  ModelPhysicalTests.cpp  ModelTests.cpp  README.md  SegmentationPhysicalTets.cpp
test/processingTests/visual/: CMakeLists.txt  ModelTestsVisual.cpp  SegmentationTestsVisual.cpp
test/research/: CMakeLists.txt  README.md
test/research/DepthFiltering/: CMakeLists.txt  CompareDepthFiltering.cpp
test/research/DepthFiltering/data/: fixture_1.pcd  fixture_3.pcd  fixture_default_filtered.pcd  fixture_default_raw.pcd
test/research/algoDev/: 2DHoleFilling.cpp  CMakeLists.txt
test/research/calibration/: CMakeLists.txt  Calibration.cpp
test/research/calibration/data/: 0.pcd  20.pcd
test/research/depthFiltering/: CMakeLists.txt  CompareDepthFiltering.cpp  README.md
test/research/depthFiltering/data/: calibration_cloud.pcd  fixture_2.pcd  fixture_raw.pcd  raw_cloud.pcd  sponge.pcd
test/research/meshing/: CMakeLists.txt  ConcaveHull.cpp  TableExample.cpp
test/research/meshing/data/: rabbit_registered.pcd
test/research/registration/: CMakeLists.txt  Registration.cpp
test/research/registration/data/: 0.pcd  100.pcd  120.pcd  140.pcd  160.pcd  180.pcd  20.pcd  200.pcd  220.pcd  240.pcd  260.pcd  280.pcd  300.pcd  320.pcd  340.pcd  40.pcd  60.pcd  80.pcd
test/research/segmentation/: CMakeLists.txt  Segmentation.cpp
test/research/segmentation/data/: 0.pcd  20.pcd
test/typeTests/: CameraTypesTests.cpp  CloudTypeTests.cpp
test/typesTests/: CMakeLists.txt  CameraTypesTests.cpp  CloudTypeTests.cpp  README.md
test/utilsTests/: AlgosTests.cpp  CMakeLists.txt  FileHandlerPhysicalTests.cpp  FileHandlerTests.cpp  README.md
(+42 files in other folders)
